# media-elo

./: .gitignore  Cargo.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mediaelo/client/: MainActivity.kt  MediaEloApp.kt
android/app/src/main/java/com/mediaelo/client/api/: MediaEloClient.kt  Models.kt
android/app/src/main/java/com/mediaelo/client/data/: Constants.kt  Pairer.kt  Repo.kt  Settings.kt
android/app/src/main/java/com/mediaelo/client/ui/: AddSheet.kt  AppRoot.kt  EditSheet.kt  FormFields.kt  LibraryScreen.kt  LibraryViewModel.kt  SettingsScreen.kt  SettingsViewModel.kt  Theme.kt  VoteScreen.kt  VoteViewModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/: libs.versions.toml
crates/client/: Cargo.toml
crates/client/src/: api.rs  app.rs  main.rs
crates/core/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: csv_import.rs  handlers.rs  main.rs
rust/: Cargo.toml
rust/crates/client/: Cargo.toml
rust/crates/client/src/: pairer.rs  ui.rs
rust/crates/core/: Cargo.toml
rust/crates/server/src/: db.rs  main.rs
