[workspace]
resolver = "2"
members = ["crates/core", "crates/server", "crates/client"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.8"
media-elo-core = { path = "crates/core" }

[profile.release]
lto = "thin"
strip = true
